--- a/TodoAPI/wwwroot/index.html
+++ b/TodoAPI/wwwroot/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>To-do App</title>
+    <title>To-do App New</title>
     <link rel="stylesheet" href="css/site.css" />
 </head>
 <body>
-    <h1>To-do App</h1>
+    <h1>To-do App New</h1>
     <h3>Add</h3>
     <form action="javascript:void(0);" method="POST" onsubmit="addItem()">
         <input type="text" id="add-name" placeholder="New to-do">
